# crud-rust

./: .dockerignore  .env.example  Cargo.toml  compose.yaml
.github/workflows/: rust.yml
infra/: watch.Dockerfile
migrations/: 20250526102337_items_table.sql  20250526114034_users_table.sql
src/: config.rs  items.rs  lib.rs  main.rs  middleware.rs  state.rs
src/handler/: item.rs  user.rs
src/model/: error.rs  http.rs  item.rs  mod.rs  user.rs
src/repository/: item.rs  mod.rs  registry.rs  user.rs
src/service/: item.rs  mod.rs  registry.rs  user.rs
