[package]
name = "crud-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
mockall = "0.13.1"
